# vehicle-dynamics

./: .gitignore  Braking.pickle  LICENSE  README.md  bmw_m8.yaml  main.py  pyproject.toml  setup.py
example_data/: Braking.pickle  DBLane.pickle
vehicle_dynamics/: VehicleDynamics.py  __init__.py  main.py
vehicle_dynamics/modules/: LocalLogger.py  __init__.py  body.py  powertrain.py  wheels.py
vehicle_dynamics/structures/: AngularWheelPosition.py  CurrentStates.py  Displacement.py  Manoeuvre.py  OutputStates.py  StateVector.py  StaticParameters.py  StrutForce.py  TireForces.py  WheelHubForce.py  __init__.py
vehicle_dynamics/utils/: CurrentStates.py  LocalLogger.py  StaticParameters.py  __init__.py  import_data_CM.py  plot_function.py
